# webweb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  index.html  server.js  sw.js
.cargo/: config.toml
css/: style.css
docs/superpowers/plans/: 2026-06-17-service-worker-proxy.md  2026-06-17-webweb-browser.md  2026-06-18-canvas-browser-rewrite.md  2026-06-18-rust-backend-implementation.md
docs/superpowers/specs/: 2026-06-17-service-worker-proxy-design.md  2026-06-17-webweb-browser-design.md  2026-06-18-canvas-browser-design.md  2026-06-18-rust-backend-design.md
js/: app.js  proxy.js  storage.js  tab-manager.js
src/: browser.rs  dom.rs  main.rs  proxy.rs  static_files.rs  ws.rs
static/: index.html
static/css/: style.css
static/js/: app.js  canvas-renderer.js  proxy.js  storage.js  tab-manager.js  ws-client.js  zoom.js
