[package]
name = "webweb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies"] }
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
